# rustyssh

./: .appveyor.yml  .gitignore  .yarnrc  README.md  jsconfig.json  package.json  release.py  setupssh.py  svelte.config.js  vite.config.js
.github/workflows/: ci.yml
src/: App.jsx  File.jsx  FileBar.jsx  Files.jsx  Login.jsx  app.css  app.d.ts  app.html  main.jsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: cmd.rs  command.rs  main.rs  settings.rs  ssh.rs  util.rs
src/js/: store.js  util.js
src/lib/: App.svelte  CodeEditor.svelte  ErrorBox.svelte  File.svelte  FileBar.svelte  FileDownload.svelte  FileList.svelte  FileLoading.svelte  FilePage.svelte  Footer.svelte  Greet.svelte  Header.svelte  JsonEditor.svelte  Login.svelte  Modal.svelte  PathBar.svelte  Rename.svelte  SimpleAutocomplete.svelte  Spinner.svelte
src/routes/: +layout.js  +layout.svelte  +page.svelte
tools/: setup_wsl.ps1  setup_wsl_centos.ps1  setup_wsl_ubuntu.ps1
