[package]
name = "rustyssh"
version = "1.0.0"
description = "SSH File Manager"
authors = ["SAG"]
license = "MIT"
repository = "https://github.com/sganis/rustyssh.git"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["api-all"] }
# ssh2 = "0.9.3"
ssh2 = { git = "https://github.com/alexcrichton/ssh2-rs.git"}
confy = "0.5.1"
dirs = "4.0.0"
tauri-plugin-window-state = "0.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
